--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,8 @@
     "gpio.h": "c",
     "rcc.h": "c",
     "gpio_common_f24.h": "c",
-    "gpio_common_f234.h": "c"
+    "gpio_common_f234.h": "c",
+    "systick.h": "c",
+    "nvic.h": "c"
   }
 }
