--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
     "gpio_common_f24.h": "c",
     "gpio_common_f234.h": "c",
     "systick.h": "c",
-    "nvic.h": "c"
+    "nvic.h": "c",
+    "cstdint": "cpp"
   }
 }
