--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         "type": "shell",
         "label": "build_debug",
         "options": {
-          "cwd": "sandbox"
+          "cwd": "app"
         },
         "command": "make bin -j 10",
         "problemMatcher": "$gcc"
