--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -61,6 +61,8 @@ OBJS		+= $(SRC_DIR)/comms.o
 OBJS		+= $(SHARED_SRC_DIR)/core/system.o
 OBJS		+= $(SHARED_SRC_DIR)/core/uart.o
 OBJS		+= $(SHARED_SRC_DIR)/core/ring_buffer.o
+OBJS		+= $(SHARED_SRC_DIR)/core/logger.o
+OBJS		+= $(SHARED_SRC_DIR)/core/crc8.o
 
 ###############################################################################
 # C flags
