--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "device": "STM32F767ZI",
       "runToEntryPoint": "main",
       "interface": "swd",
-      "preLaunchTask": "build_debug"
+      "preLaunchTask": "build_debug_app"
     },
     {
       "name": "ST-Link: Attach to Application",
@@ -23,6 +23,18 @@
       "device": "STM32F767ZI",
       "runToEntryPoint": "main",
       "interface": "swd"
+    },
+    {
+      "name": "ST-Link: Launch bootloader",
+      "cwd": "${workspaceFolder}/bootloader",
+      "executable": "./bootloader.elf",
+      "servertype": "stutil",
+      "request": "launch",
+      "type": "cortex-debug",
+      "device": "STM32F767ZI",
+      "runToEntryPoint": "main",
+      "interface": "swd",
+      "preLaunchTask": "build_debug_bootloader"
     },
     {
       "name": "C/C++ Runner: Debug Session",
