fix fw-updater script <- this works, use as reference!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,9 @@
     "new": "c",
     "typeinfo": "c",
     "stdio.h": "c",
-    "uart.h": "c"
+    "uart.h": "c",
+    "scb.h": "c",
+    "memorymap.h": "c"
   },
   "cortex-debug.variableUseNaturalFormat": false
 }
