--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -58,7 +58,9 @@ CSTD		?= -std=c99
 
 OBJS		+= $(SRC_DIR)/$(BINARY).o
 OBJS		+= $(SRC_DIR)/comms.o
+OBJS		+= $(SRC_DIR)/bl-flash.o
 OBJS		+= $(SHARED_SRC_DIR)/core/system.o
+OBJS		+= $(SHARED_SRC_DIR)/core/simple-timer.o
 OBJS		+= $(SHARED_SRC_DIR)/core/uart.o
 OBJS		+= $(SHARED_SRC_DIR)/core/ring_buffer.o
 OBJS		+= $(SHARED_SRC_DIR)/core/logger.o
