--- a/app/Makefile
+++ b/app/Makefile
@@ -60,6 +60,7 @@ OBJS		+= $(SRC_DIR)/$(BINARY).o
 OBJS		+= $(SRC_DIR)/bootloader.o
 OBJS		+= $(SRC_DIR)/timer.o
 OBJS		+= $(SHARED_SRC_DIR)/core/system.o
+OBJS		+= $(SHARED_SRC_DIR)/core/simple-timer.o
 OBJS		+= $(SHARED_SRC_DIR)/core/uart.o
 OBJS		+= $(SHARED_SRC_DIR)/core/ring_buffer.o
 OBJS		+= $(SHARED_SRC_DIR)/core/logger.o
